# aoc2025

./: .gitignore  aoc2025.opam  dune-project
.direnv/: flake-profile-2-link
.zed/: settings.json
lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  dune  runner.ml  runner.mli  solution.mli
test/: day01_test.ml  day02_test.ml  day03_test.ml  day04_test.ml  day05_test.ml  day06_test.ml  dune
