(lang dune 3.20)

(name aoc2025)

(generate_opam_files true)

(source
 (github nandhagk/aoc2025))

(authors "nandhagk <nandhagopi@gmail.com>")

(license MIT)

(package
 (name aoc2025)
 (synopsis "AoC 2025")
 (depends ocaml core ppx_jane re2))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
